--- a/AFC-sous-R.Rmd
+++ b/AFC-sous-R.Rmd
@@ -9,6 +9,9 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r knitr_init, echo=FALSE, results="asis", cache=FALSE}
+library(knitr)
+```
 
 ### Auteurs
 **Jean-Baptiste PRESSAC** ([CRBC](https://www.univ-brest.fr/crbc/menu/Membres+du+laboratoire/Personnel_administratif_et_technique/Jean-Baptiste_Pressac "Laboratoire CRBC"), CNRS) (Jean-Baptiste.Pressac@univ-brest.fr)     
@@ -111,6 +114,44 @@ Pour la fonction `dimnames()` :
 
 Suivant cette logique, lorsque nous écrivons, par exemple, `(dimnames(don)[[2]][3]<-"...")`, cela signifie que nous allons renommer la troisième modalité en colonne.
 
+Notez que nous pouvons calculer sous R les marges lignes et les marges colonnes du tableau de contingence de la manière suivante :
+
+
+```{r dons_avec_marges}
+don_avec_marges <- don
+don_avec_marges$Total <- rowSums(don_avec_marges)
+don_avec_marges[nrow(don_avec_marges)+1, ] <- colSums(don_avec_marges)
+row.names(don_avec_marges)[nrow(don_avec_marges)] <- "Total"
+don_avec_marges
+```
+
+
+Affichons ce tableau de manière plus agréable dans ce document :
+
+```{r, echo=FALSE}
+
+kable(don_avec_marges) 
+```
+
+Il est aussi interessant de calculer les pourcentages en ligne et les pourcentages en colonne.
+
+```{r dons_pourcentage_en_ligne}
+dons_pourcentage_en_ligne <- don
+dons_pourcentage_en_ligne$Moyenne <- rowMeans(dons_pourcentage_en_ligne)
+dons_pourcentage_en_ligne[nrow(dons_pourcentage_en_ligne)+1, ] <- colSums(dons_pourcentage_en_ligne)
+row.names(dons_pourcentage_en_ligne)[nrow(dons_pourcentage_en_ligne)] <- "Total"
+dons_pourcentage_en_ligne
+```
+
+
+Comme nous le verrons plus loin, on passera en paramètre de la fonction R de calcul de l'AFC le tableau de contingence. Mais l'AFC travaille en réalité sur le tableau de probabilités que l'on peut calculer de cette manière sous R :
+
+```{r tableau_de_probabilite}
+# tableau_de_probabilite <- addmargins(don,FUN=list(Pourcentage=function(x) round(sum(x)/sum(don),2)))
+# tableau_de_probabilite[length(tableau_de_probabilite)] <- 100
+# tableau_de_probabilite
+```
+
 Rappellons que notre objectif est bien de **visualiser la nature de la liaison entre deux variables qualitatives**. Mais faut-il encore que cette liaison soit **significative**.        
 
 Pour ce faire, nous réalisons un **test du Khi2**.      
@@ -179,25 +220,12 @@ Par ailleurs,
 * Un **écart à l'indépendance positif** correspond à une **attraction** entre les deux modalités pour la case observée.
 * À l'inverse, un **écart à l'indépendance négatif** correspond à une **opposition** entre les deux modalités pour la case observée.        
 
-Plus la valeur de l'écart à l'indépendance est importante, plus l'attraction/opposition entre les modalités est forte.       
-
-En vue de compléter notre explication, nous réalisons un jeu de données à part avec les sommes marginales (marge ligne et marge colonne).       
-
-```{r dons}
-dons <- don[1:3]
-dons$Total <- rowSums(dons)
-dons[nrow(dons)+1, ] <- colSums(dons)
-row.names(dons)[nrow(dons)] <- "Total"
-View(dons)
-```
-
+Plus la valeur de l'écart à l'indépendance est importante, plus l'attraction/opposition entre les modalités est forte.
 
 
 ### Rappel de l'objectif
 
-Notre objectif est bien de **visualiser la nature de la liaison entre les deux variables qualitatives**.
-
-Sachant qu'une liaison correspond à **l'écart entre les données observées et le modèle d'indépendance**, nous souhaitons donc **visualiser la nature de l'écart à l'indépendance entre deux variables qualitatives**.
+Notre objectif est bien de **visualiser la nature de la liaison entre les deux variables qualitatives**. Sachant qu'une liaison correspond à **l'écart entre les données observées et le modèle d'indépendance**, nous souhaitons donc **visualiser la nature de l'écart à l'indépendance entre deux variables qualitatives**.
 
 Par ailleurs, il y a **trois façons de caractériser la liaison** entre les deux variables qualitatives.
 
@@ -205,7 +233,26 @@ Par ailleurs, il y a **trois façons de caractériser la liaison** entre les deu
 * L'**intensité** de la liaison (qui se mesure, entre autre, avec le Phi2).
 * La **nature** de la liaison (qui correspond à l'association entre les modalités et qui est représentée par le biais de l'AFC).
 
-Enfin, l'AFC travaille, non pas sur le tableau de contingence, mais sur le tableau de probabilité.     
+### La notion d'indépendance
+
+Pour clarifier cette notin d'indépendance, reprenons notre tableau de contingence avec ses marges.
+
+```{r, echo=FALSE}
+
+kable(don_avec_marges) 
+```
+
+```{r dons_avec_marges bis}
+don_avec_marges
+```
+
+
+Affichons ce tableau de manière plus agréable dans ce document :
+
+
+
+
+Enfin, l'AFC travaille, non pas sur le tableau de contingence, mais sur le tableau de probabilité. 
 
 
 ### Chargement des packages
@@ -410,13 +457,13 @@ Les variances étant _au maximum_ égales à 1, le Phi2 peut avoir _au maximum_ 
 
 Le `% of var`, soit le pourcentage de variance, représente le **% de variance expliqué par l'axe**. Autrement dit, la dimension 1 (ou l'axe 1) explique 86.292 % de la variance entre les deux variables. Et le plan constitué des axes 1 et 2 explique 100% de la variance. Ce qui est normal puisque les pourcentages se répartissent sur tous les axes. S'il y avait eu 8 axes, le pourcentage d'inertie se serait réparti sur les 8 axes.       
 
-Dans quel cas peut-on avoir 8 axes ?       
-
 Ce qu'il faut savoir c'est que le nombre d'axes est égal au nombre minimum entre le nombre de colonnes - 1 et le nombre de lignes - 1 du tableau de contingence. Autrement, si vous avez un tableau de contingence avec en ligne 9 modalités et en colonnes 15 modalités. On fait 9 - 1 = 8 puis 15 - 1 = 14 et on garde 8.       
 
-Dans ce cas le % de variance permettra de choisir le nombre d'axes à retenir pour l'analyse.       
+### Interpréter la position des points sur le graphe
 
-La position par rapport au centre de l'axe. Le centre de l'axe correspond au profil moyen en ligne et le profil moyen en colonne.       
+Le centre de l'axe correspond au profil moyen en ligne et au profil moyen en colonne. Pour rappel, le profil moyen correspond à la distribution marginale, c'est à dire à la marge (ligne ou colonne) divisée par l'effectif total (les 1724 femmes de l'enquête du CREDOC).
+
+
 
 * Expliquer le profil moyen avec le fichier Excel et montrer que les pourcentages colonnes de "travailler à mi-temps" sont proches du profil colonne moyen. Ce que l'on retrouve bien sur le graphe où "travailler à mi-temps" est proche du centre du graphe.       
 
